tests/paczka1/small_fuzzy/77787577.err
Error in line 2: 8yXWOSuZ S800 128,89
Error in line 4: cbjFRGK A940 3,7
Error in line 10: 8yXWOSuZ SZ31 88,8
Error in line 12: A940 A524 92,1
